tests/lean/eagerUnfoldingIssue.lean.expected.out
eagerUnfoldingIssue.lean:6:2-6:17: error: failed to synthesize instance
  MonadLog MetaM
eagerUnfoldingIssue.lean:12:2-12:17: error: failed to synthesize instance
  MonadLog MetaM
eagerUnfoldingIssue.lean:15:0-15:13: error: invalid 'end', name mismatch
